[gd_scene load_steps=70 format=3 uid="uid://b6dtopvb54qyu"]

[ext_resource type="Script" path="res://assets/controllers/scripts/PlayerController.gd" id="1_0ynvo"]
[ext_resource type="Material" uid="uid://b4gwd5h7ixvct" path="res://assets/materials/player.tres" id="2_8r2m2"]
[ext_resource type="Script" path="res://assets/controllers/scripts/snap_stairs.gd" id="3_breom"]
[ext_resource type="Script" path="res://assets/controllers/scripts/Camera3D.gd" id="3_riu41"]
[ext_resource type="Shader" path="res://assets/shaders/moebius.gdshader" id="4_c2g46"]
[ext_resource type="Script" path="res://assets/controllers/scripts/climb.gd" id="4_ks7pu"]
[ext_resource type="Shader" path="res://assets/weapons/fps_controller.gdshader" id="4_ownym"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/StateMachine.gd" id="5_0pah7"]
[ext_resource type="Script" path="res://assets/controllers/scripts/DebugLine.gd" id="5_x1m35"]
[ext_resource type="AudioStream" uid="uid://cs6aqeydwcet2" path="res://assets/audio/巴雷特 721431__the_epic1357__new-barrett.mp3" id="6_5d5tw"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/PlayerIdle.gd" id="6_6erok"]
[ext_resource type="Script" path="res://assets/controllers/scripts/stand_on_head.gd" id="6_s6i6a"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/PlayerJump.gd" id="7_cjesm"]
[ext_resource type="AudioStream" uid="uid://da2l0v4jeeaer" path="res://assets/audio/开关2 144286__dwoboyle__light_switch-0002-on-02.wav" id="7_e4fg3"]
[ext_resource type="PackedScene" uid="uid://0q6b86lt8kno" path="res://assets/special_effects/speed_line_1.tscn" id="7_p56ye"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/PlayerRun.gd" id="7_vuvif"]
[ext_resource type="Script" path="res://assets/controllers/SpeedLine2.gd" id="8_4ymki"]
[ext_resource type="AudioStream" uid="uid://t1e8auac52bx" path="res://assets/audio/开关1 725309__oldhiccup__light-switch.mp3" id="8_mjdxn"]
[ext_resource type="PackedScene" uid="uid://bj86e8r4y1oav" path="res://assets/global/double_click.tscn" id="9_8mfoq"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/PlayerFall.gd" id="9_xk5q4"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/PlayerDash.gd" id="10_nqmol"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/PlayerDashJump.gd" id="11_tud07"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/CameraIdle.gd" id="11_uc086"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/CameraLookBack.gd" id="12_b1wsi"]
[ext_resource type="Script" path="res://assets/weapons/scripts/weapon_manager.gd" id="12_kdq0o"]
[ext_resource type="PackedScene" uid="uid://boandfdhseyio" path="res://assets/weapons/rifle/rifle.tscn" id="13_6wl66"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/CameraTurnRound.gd" id="13_7scuy"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/PlayerFreeViewMode.gd" id="14_a4jom"]
[ext_resource type="Script" path="res://assets/controllers/state_scripts/PlayerClimb.gd" id="18_u1swj"]
[ext_resource type="Script" path="res://addons/godot-polyliner/Trail3D/Trail3D.gd" id="21_iqf47"]
[ext_resource type="PackedScene" uid="uid://ckpsxx6l7nhwf" path="res://assets/controllers/player_rigid_body.tscn" id="22_xhf1x"]
[ext_resource type="Shader" path="res://assets/shaders/player_trail3D.gdshader" id="24_8fqh3"]
[ext_resource type="Script" path="res://assets/controllers/scripts/grab.gd" id="26_x16s4"]
[ext_resource type="Shader" path="res://assets/shaders/radial_blur.gdshader" id="33_2vxe7"]
[ext_resource type="Script" path="res://assets/controllers/scripts/radial_blur.gd" id="34_xjmox"]
[ext_resource type="Texture2D" uid="uid://bmkktpgboa6us" path="res://icon.svg" id="35_igf36"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6tv51"]
material = ExtResource("2_8r2m2")
radius = 0.35
height = 1.7
radial_segments = 16
rings = 4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4bbek"]
margin = 0.1
radius = 0.35
height = 1.7

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gespb"]
height = 1.7
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ehhrh"]
radius = 0.35
height = 1.7

[sub_resource type="SphereShape3D" id="SphereShape3D_r4ei1"]
radius = 0.08

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sl7qq"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_2882v"]
material = SubResource("StandardMaterial3D_sl7qq")
radial_segments = 4
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2t2k1"]
albedo_color = Color(1, 0.52, 0.52, 1)

[sub_resource type="SphereMesh" id="SphereMesh_o0k6g"]
material = SubResource("StandardMaterial3D_2t2k1")
radial_segments = 4
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ktole"]

[sub_resource type="SphereMesh" id="SphereMesh_l5ln1"]
material = SubResource("StandardMaterial3D_ktole")
radial_segments = 4
rings = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s0f3v"]
height = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_maadx"]
height = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_160lq"]
height = 1.0
radius = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_klrk4"]
radial_segments = 16
rings = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6jjnd"]

[sub_resource type="BoxMesh" id="BoxMesh_ht6lx"]
size = Vector3(5, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1evpt"]
albedo_color = Color(0, 0.5, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_rck5d"]
material = SubResource("StandardMaterial3D_1evpt")
radial_segments = 4
rings = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3j8dm"]
shader = ExtResource("4_ownym")

[sub_resource type="Curve" id="Curve_m4hxw"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.148773, 0.993932), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_q20ov"]
curve = SubResource("Curve_m4hxw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n5psr"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.5
emission_ring_inner_radius = 1.0
angle_max = 90.0
direction = Vector3(0, 0, 1)
spread = 2.0
orbit_velocity_min = 0.391
orbit_velocity_max = 0.391
gravity = Vector3(0, -0.1, 0)
alpha_curve = SubResource("CurveTexture_q20ov")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b78t5"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.25098)

[sub_resource type="SphereMesh" id="SphereMesh_mo1ai"]
material = SubResource("StandardMaterial3D_b78t5")
radius = 0.01
radial_segments = 6
rings = 3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_t7xkq"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 2
stream_0/stream = ExtResource("7_e4fg3")
stream_1/stream = ExtResource("8_mjdxn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2sxo4"]
render_priority = 0
shader = ExtResource("24_8fqh3")
shader_parameter/line_width = 0.04
shader_parameter/tangent_facing = true
shader_parameter/rounded = false
shader_parameter/tube_normal = true
shader_parameter/uv_matches_width = true
shader_parameter/tex_scale = Vector2(1, 1)
shader_parameter/color = Color(0, 1, 1, 1)
shader_parameter/alpha = 0.8
shader_parameter/metallic = 1.0
shader_parameter/specular = 1.0
shader_parameter/roughness = 0.0
shader_parameter/tex_stretch = true
shader_parameter/fade_distance = 2.0
shader_parameter/fade_power = 0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lm17m"]
render_priority = 0
shader = ExtResource("4_c2g46")
shader_parameter/zNear = 0.05
shader_parameter/zFar = 0.12
shader_parameter/outlineThickness = 1.0
shader_parameter/outlineColor = Color(0, 0, 0, 1)
shader_parameter/wiggleFrequency = 0.04
shader_parameter/wiggleAmplitude = 5.0
shader_parameter/edgeDepthPower = 0.0
shader_parameter/edgeNormalPower = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_j2kfo"]
material = SubResource("ShaderMaterial_lm17m")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0a7j1"]
resource_local_to_scene = true
shader = ExtResource("33_2vxe7")
shader_parameter/blur_center = Vector2(0.5, 0.5)
shader_parameter/un_blur_radius_min = 0.15
shader_parameter/un_blur_radius_max = 0.2
shader_parameter/blur_power = 0.01
shader_parameter/sampling_count = 6
shader_parameter/lod = 0.0

[sub_resource type="QuadMesh" id="QuadMesh_4hsx5"]
lightmap_size_hint = Vector2i(12, 12)
material = SubResource("ShaderMaterial_0a7j1")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aqh4s"]
resource_local_to_scene = true
shader = ExtResource("33_2vxe7")
shader_parameter/blur_center = Vector2(0.5, 0.5)
shader_parameter/un_blur_radius_min = 0.2
shader_parameter/un_blur_radius_max = 0.5
shader_parameter/blur_power = 0.01
shader_parameter/sampling_count = 8
shader_parameter/lod = 0.5

[sub_resource type="GDScript" id="GDScript_8y3ji"]
script/source = "extends SubViewport


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	size.x = ProjectSettings.get_setting(\"display/window/size/viewport_width\")
	size.y = ProjectSettings.get_setting(\"display/window/size/viewport_height\")
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	size = get_window().size
	pass
"

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA") groups=["Player"]]
process_mode = 1
collision_mask = 4130
floor_stop_on_slope = false
floor_snap_length = 0.2
platform_floor_layers = 4294905858
platform_wall_layers = 2
script = ExtResource("1_0ynvo")
CAMERA = NodePath("Head/Camera3D")
mass = 50.0

[node name="PlaceholderMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
mesh = SubResource("CapsuleMesh_6tv51")
skeleton = NodePath("../CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_4bbek")

[node name="PlayerRigidBody" parent="." node_paths=PackedStringArray("player") instance=ExtResource("22_xhf1x")]
player = NodePath("..")
ues_player_rigid_body = false

[node name="PlayerTransformMarker" type="Marker3D" parent="."]

[node name="BelowRay" type="RayCast3D" parent="."]
collision_mask = 4134

[node name="SnapStairs" type="Node3D" parent="."]
script = ExtResource("3_breom")

[node name="StairsAheadRay" type="RayCast3D" parent="SnapStairs"]
target_position = Vector3(0, -0.6, 0)
collision_mask = 34

[node name="StairsBelowRay" type="RayCast3D" parent="SnapStairs"]
target_position = Vector3(0, -0.8, 0)
collision_mask = 34

[node name="StairsBelowEdgeRay" type="RayCast3D" parent="SnapStairs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, -1.2)
target_position = Vector3(0, 0, 2)
collision_mask = 34

[node name="StairRay2" type="RayCast3D" parent="SnapStairs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
collision_mask = 34

[node name="StairRay3" type="RayCast3D" parent="SnapStairs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
collision_mask = 34

[node name="Climb" type="Node3D" parent="."]
script = ExtResource("4_ks7pu")
ray_target_position = Vector3(0, 0, -1.2)

[node name="StrikeHeadArea" type="Area3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55, 0)
collision_layer = 0
collision_mask = 34

[node name="CollisionShape3D" type="CollisionShape3D" parent="Climb/StrikeHeadArea"]
shape = SubResource("CylinderShape3D_gespb")

[node name="ClipCast" type="ShapeCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
enabled = false
shape = SubResource("CapsuleShape3D_ehhrh")
target_position = Vector3(0, 0, 0)
collision_mask = 34

[node name="EdgeCast" type="ShapeCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, -1)
enabled = false
shape = SubResource("SphereShape3D_r4ei1")
target_position = Vector3(0, 0, 0)
collision_mask = 34

[node name="WallRay" type="RayCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
enabled = false
target_position = Vector3(0, 0, -1)
collision_mask = 34
debug_shape_custom_color = Color(0, 1, 1, 0.0313726)

[node name="AirRay" type="RayCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
enabled = false
target_position = Vector3(0, 0, -1)
collision_mask = 34

[node name="DownToFloorRay" type="RayCast3D" parent="Climb/AirRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
enabled = false
target_position = Vector3(0, -0.6, 0)
collision_mask = 34

[node name="ChestRay" type="RayCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
enabled = false
target_position = Vector3(0, 0, -1)
collision_mask = 34
debug_shape_custom_color = Color(0, 1, 1, 0.0313726)

[node name="Mesh1" type="MeshInstance3D" parent="Climb"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.1, 1.4, -2)
top_level = true
mesh = SubResource("SphereMesh_2882v")

[node name="Mesh2" type="MeshInstance3D" parent="Climb"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 1.4, -2)
top_level = true
mesh = SubResource("SphereMesh_o0k6g")

[node name="Mesh3" type="MeshInstance3D" parent="Climb"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.1, 1.4, -2)
top_level = true
mesh = SubResource("SphereMesh_l5ln1")

[node name="StandOnHead" type="Node3D" parent="."]
script = ExtResource("6_s6i6a")

[node name="StandBody" type="AnimatableBody3D" parent="StandOnHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
top_level = true
collision_layer = 4096

[node name="StandCollision" type="CollisionShape3D" parent="StandOnHead/StandBody"]
shape = SubResource("CylinderShape3D_s0f3v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StandOnHead/StandBody"]
transparency = 0.5
mesh = SubResource("CylinderMesh_maadx")

[node name="StandArea" type="Area3D" parent="StandOnHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.55, 0)
collision_layer = 0
collision_mask = 2052

[node name="StandAreaCollision" type="CollisionShape3D" parent="StandOnHead/StandArea"]
shape = SubResource("CylinderShape3D_160lq")

[node name="RayCast3D" type="RayCast3D" parent="StandOnHead"]
top_level = true
enabled = false
target_position = Vector3(0, -2, 0)
collision_mask = 2052
collide_with_areas = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)

[node name="Camera3D" type="Camera3D" parent="Head" node_paths=PackedStringArray("PLAYER")]
doppler_tracking = 2
script = ExtResource("3_riu41")
PLAYER = NodePath("../..")
tilt_head_to_body_angle = 20.0
tilt_angle = 2.0
lr_tilt_speed = 0.05
fov_base = 80.0

[node name="ReflectionProbe" type="ReflectionProbe" parent="Head/Camera3D"]
visible = false
origin_offset = Vector3(9.99, 9.99, 9.99)
enable_shadows = true

[node name="EyeRayCast" type="RayCast3D" parent="Head/Camera3D"]
collision_mask = 54
collide_with_areas = true

[node name="EyeArea" type="Area3D" parent="Head/Camera3D"]
collision_layer = 0
collision_mask = 4

[node name="CylinderXX" type="MeshInstance3D" parent="Head/Camera3D/EyeArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_klrk4")
skeleton = NodePath("")

[node name="EyeAreaCollisionShape" type="CollisionShape3D" parent="Head/Camera3D/EyeArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_6jjnd")

[node name="NormalTargetMarker" type="Marker3D" parent="Head/Camera3D"]

[node name="AuxiliaryEndMarker" type="Marker3D" parent="Head/Camera3D"]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head/Camera3D/AuxiliaryEndMarker"]
mesh = SubResource("BoxMesh_ht6lx")

[node name="AuxiliaryAimingBall" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -1.4, -0.5)
mesh = SubResource("SphereMesh_rck5d")
skeleton = NodePath("../../..")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="Head/Camera3D"]
visible = false

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Head/Camera3D"]
remote_path = NodePath("../../../SubViewport/Camera3D")

[node name="Hand" type="Node3D" parent="Head"]
script = ExtResource("26_x16s4")

[node name="Marker3D" type="Marker3D" parent="Head/Hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Interaction" type="RayCast3D" parent="Head/Hand"]
target_position = Vector3(0, 0, -3)
collision_mask = 32
debug_shape_thickness = 1

[node name="Joint" type="Generic6DOFJoint3D" parent="Head/Hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
node_a = NodePath("../GrabStaticBody")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="GrabStaticBody" type="StaticBody3D" parent="Head/Hand"]

[node name="RightingTimer" type="Timer" parent="Head/Hand"]
process_mode = 3
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="Collimator" type="ColorRect" parent="Head"]
visible = false
material = SubResource("ShaderMaterial_3j8dm")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="CSGBox3D" type="CSGBox3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, -0.82)
visible = false
size = Vector3(1.13, 0.1, 1.13)

[node name="SpeedLine1" parent="Head" instance=ExtResource("7_p56ye")]

[node name="SpeedLine2" type="Node3D" parent="Head"]
visible = false
script = ExtResource("8_4ymki")

[node name="SpeedLineParticles" type="GPUParticles3D" parent="Head/SpeedLine2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
visible = false
extra_cull_margin = 16384.0
amount = 64
lifetime = 4.0
process_material = SubResource("ParticleProcessMaterial_n5psr")
draw_pass_1 = SubResource("SphereMesh_mo1ai")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Head"]
remote_path = NodePath("../../WeaponManager")

[node name="WeaponManager" type="Node3D" parent="." node_paths=PackedStringArray("initial_weapon")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
script = ExtResource("12_kdq0o")
initial_weapon = NodePath("Rifle")

[node name="Rifle" parent="WeaponManager" instance=ExtResource("13_6wl66")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.24, -0.1, -0.35)

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_0pah7")
initial_state = NodePath("Fall")

[node name="Idle" type="Node" parent="MovementStateMachine"]
script = ExtResource("6_6erok")

[node name="Run" type="Node" parent="MovementStateMachine"]
script = ExtResource("7_vuvif")

[node name="Jump" type="Node" parent="MovementStateMachine"]
script = ExtResource("7_cjesm")

[node name="Fall" type="Node" parent="MovementStateMachine"]
script = ExtResource("9_xk5q4")

[node name="Dash" type="Node" parent="MovementStateMachine"]
script = ExtResource("10_nqmol")

[node name="DashJump" type="Node" parent="MovementStateMachine"]
script = ExtResource("11_tud07")

[node name="Climb" type="Node" parent="MovementStateMachine"]
script = ExtResource("18_u1swj")

[node name="FreeViewMode" type="Node" parent="MovementStateMachine"]
script = ExtResource("14_a4jom")

[node name="CameraStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_0pah7")
initial_state = NodePath("CameraIdle")

[node name="CameraIdle" type="Node" parent="CameraStateMachine"]
script = ExtResource("11_uc086")

[node name="LookBack" type="Node" parent="CameraStateMachine"]
script = ExtResource("12_b1wsi")

[node name="TurnRound" type="Node" parent="CameraStateMachine"]
script = ExtResource("13_7scuy")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="JumpRequestTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="TurnRoundTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.8
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.16
one_shot = true

[node name="DashCDTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="DashJumpTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.26
one_shot = true

[node name="NotAirSpeedClampTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="ClimbTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="Audios" type="Node3D" parent="."]

[node name="DashAudio" type="AudioStreamPlayer" parent="Audios"]
volume_db = 12.0
pitch_scale = 0.06
max_polyphony = 5

[node name="GunAudio3D" type="AudioStreamPlayer3D" parent="Audios"]
stream = ExtResource("6_5d5tw")
volume_db = -25.0
max_db = 1.0
pitch_scale = 1.5
max_polyphony = 10

[node name="LandingAudio3D" type="AudioStreamPlayer3D" parent="Audios"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -30, 0)
stream = SubResource("AudioStreamRandomizer_t7xkq")
pitch_scale = 0.5
max_polyphony = 5

[node name="DebugLine" type="Node3D" parent="."]
script = ExtResource("5_x1m35")

[node name="DoubleClick" parent="." instance=ExtResource("9_8mfoq")]

[node name="Trail3D" type="Node3D" parent="."]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
visible = false
script = ExtResource("21_iqf47")
sampling_mode = 1
max_points = 400
material = SubResource("ShaderMaterial_2sxo4")

[node name="Filters" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, -1)
visible = false
mesh = SubResource("QuadMesh_j2kfo")
skeleton = NodePath("../Head/Camera3D")

[node name="RadialBlur1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, -0.8)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_4hsx5")

[node name="RadialBlur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_aqh4s")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("34_xjmox")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="RadialBlur"]
layout_mode = 1
anchors_preset = -1
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(64, 64)
texture = ExtResource("35_igf36")
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="."]
use_hdr_2d = true
render_target_update_mode = 0
script = SubResource("GDScript_8y3ji")

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
doppler_tracking = 2

[connection signal="weapon_main_action" from="." to="WeaponManager" method="_on_main_action"]
[connection signal="weapon_sub_action" from="." to="WeaponManager" method="_on_sub_action"]
[connection signal="area_entered" from="StandOnHead/StandArea" to="StandOnHead" method="_on_stand_area_area_entered"]
[connection signal="area_exited" from="StandOnHead/StandArea" to="StandOnHead" method="_on_stand_area_area_exited"]
[connection signal="body_entered" from="StandOnHead/StandArea" to="StandOnHead" method="_on_stand_area_body_entered"]
[connection signal="body_exited" from="StandOnHead/StandArea" to="StandOnHead" method="_on_stand_area_body_exited"]
[connection signal="body_entered" from="Head/Camera3D/EyeArea" to="Head/Camera3D" method="_on_eye_area_body_entered"]
[connection signal="body_exited" from="Head/Camera3D/EyeArea" to="Head/Camera3D" method="_on_eye_area_body_exited"]
